# modpack-setup-util

./: README.md  pyproject.toml
src/: main.py
src/web_content/: index.css  index.html
