[project]
name = "modpack-setup-util"
version = "0.1.0"
description = ""
authors = [
    {name = "CinnamonBunniy",email = "240538810+CinnamonBunniy@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pywebview (>=6.1,<7.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
